--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -78,3 +78,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.disabled {
+  pointer-events: none;
+  cursor: default;
+}
