--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,5 +1,8 @@
 <cms-header></cms-header>
 
-<main [@fadeAnimation]="getRouterOutletState(o)">
+<!-- <main [@fadeAnimation]="getRouterOutletState(o)">
   <router-outlet class="main" #o="outlet"></router-outlet>
+</main> -->
+<main>
+  <router-outlet class="main"></router-outlet>
 </main>
