--- a/front-end/src/app/modules/admin/admin.component.html
+++ b/front-end/src/app/modules/admin/admin.component.html
@@ -1,14 +1,20 @@
 <mat-sidenav-container>
   <!-- Sidenav -->
-  <mat-sidenav #sidenav opened [fixedInViewport]="true" [fixedTopGap]>
+  <mat-sidenav
+    #sidenav
+    [mode]="isBiggerScreen() ? 'over' : 'side'"
+    [(opened)]="opened"
+    [fixedInViewport]="true"
+    [fixedTopGap]
+  >
     <mat-nav-list>
-      <a mat-list-item routerLinkActive="active" routerLink="/add-student">
+      <a mat-list-item routerLinkActive="active" [routerLink]="['comic']">
         <i>+</i> Quadrinhos
       </a>
-      <a mat-list-item routerLinkActive="active" routerLink="/students-list">
+      <a mat-list-item routerLinkActive="active" [routerLink]="['author']">
         <i>+</i> Autores
       </a>
-      <a mat-list-item routerLinkActive="active" routerLink="/students-list">
+      <a mat-list-item routerLinkActive="active" [routerLink]="['genre']">
         <i>+</i> Categorias
       </a>
     </mat-nav-list>
