--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.scss
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.scss
@@ -19,8 +19,8 @@
       margin-right: rem(5);
     }
   }
+}
 
-  mat-card + mat-card {
-    margin-left: rem(5);
-  }
+mat-form-field {
+  margin-right: rem(20);
 }
