--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -1,36 +1,98 @@
 <div class="title-group">
-  <h1 class="mat-h1">
-    <i class="fa fa-list-alt" aria-hidden="true"></i>
-    Categorias
-  </h1>
-  <button mat-button><i class="fas fa-plus"></i> Nova Categoria</button>
+  <h1 class="mat-h1">Categorias</h1>
+  <button (click)="openDialog()" mat-button>
+    <i class="fas fa-plus"></i> Nova Categoria
+  </button>
 </div>
 <mat-divider fxFlex="1 0"></mat-divider>
 
+<h2>
+  <i class="fas fa-filter"></i>
+  Filtros
+</h2>
+<mat-divider></mat-divider>
+
 <div class="inner-wrapper">
-  <form novalidate>
-    <mat-card>
-      <div class="controlers-wrapper">
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Nome" formControlName="student_name" />
-        </mat-form-field>
+  <form [formGroup]="form">
+    <div class="controlers-wrapper">
+      <mat-form-field>
+        <input matInput placeholder="ID" formControlName="genreID" />
+      </mat-form-field>
 
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            placeholder="Descrição"
-            formControlName="student_name"
-          />
-        </mat-form-field>
-      </div>
-    </mat-card>
+      <mat-form-field>
+        <input matInput placeholder="Nome" formControlName="name" />
+      </mat-form-field>
+    </div>
 
-    <mat-card>
-      <div class="full-wrapper button-wrapper">
-        <div class="button-wrapper">
-          <button mat-flat-button color="warn">Pesquisar</button>
-        </div>
+    <div class="full-wrapper button-wrapper">
+      <div class="button-wrapper">
+        <button mat-flat-button color="warn">Pesquisar</button>
       </div>
-    </mat-card>
+    </div>
   </form>
+</div>
+
+<div class="title-group">
+  <h1 class="mat-h1">
+    <i class="fa fa-list-alt" aria-hidden="true"></i>
+    Lista de Categorias
+  </h1>
+  <mat-divider fxFlex="1 0"></mat-divider>
+</div>
+
+<p *ngIf="genres.length <= 0" class="no-data">There is no student added yet!</p>
+
+<div class="container" *ngIf="genres.length > 0">
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell *matHeaderCellDef>Student ID</th>
+        <td mat-cell *matCellDef="let element">{{ element._id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="student_name">
+        <th mat-header-cell *matHeaderCellDef>Student Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.student_name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="student_email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.student_email }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="section">
+        <th mat-header-cell *matHeaderCellDef>Section</th>
+        <td mat-cell *matCellDef="let element">{{ element.section }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <button
+            mat-raised-button
+            color="primary"
+            class="push-right"
+            [routerLink]="['/edit-student/', element._id]"
+          >
+            Edit
+          </button>
+          <button
+            mat-raised-button
+            color="accent"
+            (click)="deleteStudent(i, element)"
+          >
+            Delete
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons
+    ></mat-paginator>
+  </div>
 </div>
