--- a/front-end/src/app/modules/admin/admin.component.scss
+++ b/front-end/src/app/modules/admin/admin.component.scss
@@ -7,9 +7,11 @@ mat-sidenav {
   top: rem(50) !important;
   left: 0;
   width: rem(200);
+  background-color: $color-panel-bg;
 }
 
 mat-sidenav-container {
   margin-left: rem(100);
   padding: rem(30);
+  background-color: $color-panel-bg;
 }
