--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -6,14 +6,14 @@
 </div>
 <mat-divider fxFlex="1 0"></mat-divider>
 
-<h2>
+<h2 class="filter">
   <i class="fas fa-filter"></i>
   Filtros
 </h2>
 <mat-divider></mat-divider>
 
 <div class="inner-wrapper">
-  <form [formGroup]="form">
+  <form class="genre-form" [formGroup]="form">
     <div class="controlers-wrapper">
       <mat-form-field>
         <input matInput placeholder="ID" formControlName="genreID" />
@@ -26,7 +26,9 @@
 
     <div class="full-wrapper button-wrapper">
       <div class="button-wrapper">
-        <button mat-flat-button color="warn">Pesquisar</button>
+        <button class="search-button" mat-flat-button color="warn">
+          Pesquisar
+        </button>
       </div>
     </div>
   </form>
@@ -40,59 +42,50 @@
   <mat-divider fxFlex="1 0"></mat-divider>
 </div>
 
-<p *ngIf="genres.length <= 0" class="no-data">There is no student added yet!</p>
+<p *ngIf="genres.length <= 0" class="no-data">
+  Ainda não existe nenhuma categoria cadastrada
+</p>
 
 <div class="container" *ngIf="genres.length > 0">
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="_id">
-        <th mat-header-cell *matHeaderCellDef>Student ID</th>
-        <td mat-cell *matCellDef="let element">{{ element._id }}</td>
-      </ng-container>
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="GenreID">
+      <th mat-header-cell *matHeaderCellDef>Genre ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="student_name">
-        <th mat-header-cell *matHeaderCellDef>Student Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.student_name }}</td>
-      </ng-container>
+    <ng-container matColumnDef="Nome">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="student_email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.student_email }}</td>
-      </ng-container>
+    <ng-container matColumnDef="Ações">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <button
+          class="btn btn-edit"
+          mat-raised-button
+          color="primary"
+          (click)="editGenre(element)"
+        >
+          Edit
+        </button>
+        <button
+          class="btn"
+          mat-raised-button
+          color="accent"
+          (click)="deleteGenre(element)"
+        >
+          Delete
+        </button>
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="section">
-        <th mat-header-cell *matHeaderCellDef>Section</th>
-        <td mat-cell *matCellDef="let element">{{ element.section }}</td>
-      </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element; let i = index">
-          <button
-            mat-raised-button
-            color="primary"
-            class="push-right"
-            [routerLink]="['/edit-student/', element._id]"
-          >
-            Edit
-          </button>
-          <button
-            mat-raised-button
-            color="accent"
-            (click)="deleteStudent(i, element)"
-          >
-            Delete
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-    ></mat-paginator>
-  </div>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+  ></mat-paginator>
 </div>
