--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -1,5 +1,8 @@
 <div class="title-group">
-  <h1 class="mat-h1">Categorias</h1>
+  <h1 class="title">
+    <i class="fa fa-tag" aria-hidden="true"></i>
+    Categorias
+  </h1>
   <button (click)="openDialog()" mat-button>
     <i class="fas fa-plus"></i> Nova Categoria
   </button>
@@ -49,12 +52,12 @@
 <div class="container" *ngIf="genres.length > 0">
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="GenreID">
-      <th mat-header-cell *matHeaderCellDef>Genre ID</th>
+      <th mat-header-cell *matHeaderCellDef>Categoria ID</th>
       <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
     </ng-container>
 
     <ng-container matColumnDef="Nome">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
