--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.scss
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.scss
@@ -28,11 +28,11 @@
   @include flex-center;
 
   justify-content: space-between;
-  margin-top: rem(30);
 
   h1 {
     font-size: rem(14);
     margin: 0;
+    padding-bottom: rem(10);
   }
 
   ::ng-deep.mat-button-wrapper {
@@ -46,6 +46,16 @@
       margin-right: rem(5);
     }
   }
+
+  .title {
+    i {
+      margin-right: rem(10);
+    }
+
+    @include flex-center;
+    font-size: rem(20);
+    color: $color-text;
+  }
 }
 
 mat-form-field {
@@ -55,6 +65,12 @@ mat-form-field {
 table {
   width: 100%;
   background-color: $color-panel-bg;
+
+  th.mat-header-cell:first-of-type,
+  td.mat-cell:first-of-type,
+  td.mat-footer-cell:first-of-type {
+    padding-left: 0;
+  }
 
   .btn {
     @include flex-center;
