✨ feat: server-side-paginator first approach.

--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -6,7 +6,7 @@
 
 <!-- Form -->
 <div class="inner-wrapper">
-  <form (ngSubmit)="submitStudentForm()" novalidate>
+  <form [formGroup]="studentForm" (ngSubmit)="submitStudentForm()" novalidate>
     <!-- Left block -->
     <mat-card>
       <div class="controlers-wrapper">
