--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -29,7 +29,7 @@
 
     <div class="full-wrapper button-wrapper">
       <div class="button-wrapper">
-        <button class="search-button" mat-flat-button color="warn">
+        <button class="search-button" mat-flat-button color="primary">
           Pesquisar
         </button>
       </div>
@@ -75,7 +75,7 @@
         <button
           class="btn"
           mat-raised-button
-          color="accent"
+          color="warn"
           (click)="deleteGenre(element)"
         >
           Delete
