--- a/front-end/src/app/pages/home/home.component.html
+++ b/front-end/src/app/pages/home/home.component.html
@@ -1,9 +1,10 @@
 <section class="panel">
   <h1 class="panel__title">Bem vindo ao Comics++</h1>
   <p class="panel__subtitle">
-    Are you hungry? Take an order and receive at home
+    O melhor lugar para você começar ou completar a sua coleção de HQ's do
+    Brasil.
   </p>
   <a routerLink="/livros" class="panel__button">
-    <strong>Ver Livros</strong>
+    <strong>Ver HQ's</strong>
   </a>
 </section>
