--- a/front-end/src/sass/_variables.scss
+++ b/front-end/src/sass/_variables.scss
@@ -52,7 +52,7 @@ $project-colors: (
 );
 
 $project-colors-theme-dark: (
-  "primary": hsl(228, 28%, 20%),
+  "primary": #252a41,
   "background": hsl(230, 17%, 14%),
   "text": white,
   "link": #6ba8c7,
