--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -29,7 +29,12 @@
 
     <div class="full-wrapper button-wrapper">
       <div class="button-wrapper">
-        <button class="search-button" mat-flat-button color="primary">
+        <button
+          (click)="loadGenres()"
+          class="search-button"
+          mat-flat-button
+          color="primary"
+        >
           Pesquisar
         </button>
       </div>
@@ -45,12 +50,22 @@
   <mat-divider fxFlex="1 0"></mat-divider>
 </div>
 
-<p *ngIf="genres.length <= 0" class="no-data">
+<!-- <p *ngIf="genres.length <= 0" class="no-data">
   Ainda não existe nenhuma categoria cadastrada
-</p>
+</p> -->
 
-<div class="container" *ngIf="genres.length > 0">
-  <table mat-table [dataSource]="dataSource">
+<!-- <div class="container" *ngIf="genres.length > 0"></div> -->
+<div class="container">
+  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    [ngStyle]="{ display: loadingComplete ? 'table' : 'none' }"
+    style="display: none !important"
+  >
     <ng-container matColumnDef="GenreID">
       <th mat-header-cell *matHeaderCellDef>Categoria ID</th>
       <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
@@ -58,7 +73,7 @@
 
     <ng-container matColumnDef="Nome">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
     </ng-container>
 
     <ng-container matColumnDef="Ações">
@@ -88,7 +103,8 @@
   </table>
 
   <mat-paginator
-    [pageSizeOptions]="[5, 10, 20]"
+    [ngStyle]="{ display: loadingComplete ? 'block' : 'none' }"
+    [pageSizeOptions]="[2, 10, 20]"
     showFirstLastButtons
   ></mat-paginator>
 </div>
