📦 refactor: notification message when genre added.

--- a/front-end/src/app/modules/admin/components/dialogs/genre-dialog/genre-dialog.component.html
+++ b/front-end/src/app/modules/admin/components/dialogs/genre-dialog/genre-dialog.component.html
@@ -13,7 +13,7 @@
       [disabled]="form.invalid"
       [class.disabled]="form.invalid"
       class="mat-raised-button mat-primary"
-      (click)="save(form.value)"
+      (click)="save()"
     >
       Salvar
     </button>
