✨ feat: genre crud update added.

--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -83,7 +83,7 @@
           class="btn btn-edit"
           mat-raised-button
           color="primary"
-          (click)="editGenre(element)"
+          (click)="openDialog(element)"
         >
           Edit
         </button>
