--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -63,7 +63,9 @@
   <table
     mat-table
     [dataSource]="dataSource"
-    [ngStyle]="{ display: loadingComplete ? 'table' : 'none' }"
+    [ngStyle]="{
+      display: loadingComplete && paginator.length ? 'table' : 'none'
+    }"
     style="display: none !important"
   >
     <ng-container matColumnDef="GenreID">
@@ -103,7 +105,9 @@
   </table>
 
   <mat-paginator
-    [ngStyle]="{ display: loadingComplete ? 'block' : 'none' }"
+    [ngStyle]="{
+      display: loadingComplete && paginator.length ? 'block' : 'none'
+    }"
     [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons
   ></mat-paginator>
