--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -1,65 +1,157 @@
-<!-- Title group  -->
 <div class="title-group">
-  <h1 class="mat-h1">Livros</h1>
+  <h1 class="title">
+    <i class="fa fa-tag" aria-hidden="true"></i>
+    Quadrinhos
+  </h1>
+  <button (click)="openDialog()" mat-button>
+    <i class="fas fa-plus"></i> Novo Quadrinho
+  </button>
+</div>
+<mat-divider fxFlex="1 0"></mat-divider>
+
+<h2 class="filter">
+  <i class="fas fa-filter"></i>
+  Filtros
+</h2>
+<mat-divider></mat-divider>
+
+<div class="inner-wrapper">
+  <form class="genre-form" [formGroup]="form">
+    <div class="controlers-wrapper">
+      <mat-form-field>
+        <input
+          type="number"
+          matInput
+          placeholder="ID"
+          formControlName="comicID"
+        />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Titulo" formControlName="description" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Descrição" formControlName="description" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Preço" formControlName="description" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input
+          type="number"
+          matInput
+          placeholder="Ano"
+          formControlName="description"
+        />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input
+          type="number"
+          matInput
+          placeholder="Páginas"
+          formControlName="description"
+        />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Autor" formControlName="description" />
+      </mat-form-field>
+
+      <mat-form-field>
+        <input matInput placeholder="Categoria" formControlName="description" />
+      </mat-form-field>
+    </div>
+
+    <div class="full-wrapper button-wrapper">
+      <div class="button-wrapper">
+        <button
+          (click)="loadData(form.value)"
+          class="search-button"
+          mat-flat-button
+          color="primary"
+        >
+          Pesquisar
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
+
+<div class="title-group">
+  <h1 class="mat-h1">
+    <i class="fa fa-list-alt" aria-hidden="true"></i>
+    Lista de Quadrinhos
+  </h1>
   <mat-divider fxFlex="1 0"></mat-divider>
 </div>
 
-<!-- Form -->
-<div class="inner-wrapper">
-  <form [formGroup]="studentForm" (ngSubmit)="submitStudentForm()" novalidate>
-    <!-- Left block -->
-    <mat-card>
-      <div class="controlers-wrapper">
-        <!-- Name -->
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Nome" formControlName="student_name" />
-        </mat-form-field>
+<div class="container">
+  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+    <mat-spinner></mat-spinner>
+  </div>
 
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            placeholder="Descrição"
-            formControlName="student_name"
-          />
-        </mat-form-field>
+  <p
+    [ngStyle]="{
+      display: loadingComplete && !paginator.length ? 'block' : 'none'
+    }"
+    class="no-data"
+  >
+    nenhum registro encontrado.
+  </p>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Preço" formControlName="student_name" />
-        </mat-form-field>
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    [ngStyle]="{
+      display: loadingComplete && paginator.length ? 'table' : 'none'
+    }"
+    style="display: none !important"
+  >
+    <ng-container matColumnDef="GenreID">
+      <th mat-header-cell *matHeaderCellDef>Categoria ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
+    </ng-container>
 
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Ano" formControlName="student_name" />
-        </mat-form-field>
+    <ng-container matColumnDef="Nome">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    </ng-container>
 
-        <mat-form-field class="example-full-width">
-          <input
-            matInput
-            placeholder="Paginas"
-            formControlName="student_name"
-          />
-        </mat-form-field>
+    <ng-container matColumnDef="Ações">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <button
+          class="btn btn-edit"
+          mat-raised-button
+          color="primary"
+          (click)="openDialog(element)"
+        >
+          Edit
+        </button>
+        <button
+          class="btn"
+          mat-raised-button
+          color="warn"
+          (click)="deleteItem(element)"
+        >
+          Delete
+        </button>
+      </td>
+    </ng-container>
 
-        <!-- Section -->
-        <mat-form-field>
-          <mat-label>Section</mat-label>
-          <mat-select [(value)]="selectable" formControlName="section">
-            <mat-option
-              [value]="sectioinArray"
-              *ngFor="let sectioinArray of SectioinArray"
-              >{{ sectioinArray }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </mat-card>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 
-    <!-- Submit & Reset -->
-    <mat-card>
-      <div class="full-wrapper button-wrapper">
-        <div class="button-wrapper">
-          <button mat-flat-button color="warn">Submit</button>
-        </div>
-      </div>
-    </mat-card>
-  </form>
+  <mat-paginator
+    [ngStyle]="{
+      display: loadingComplete && paginator.length ? 'block' : 'none'
+    }"
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+  ></mat-paginator>
 </div>
