--- a/front-end/src/app/modules/admin/components/author-crud/author-crud.component.html
+++ b/front-end/src/app/modules/admin/components/author-crud/author-crud.component.html
@@ -79,12 +79,12 @@
   >
     <ng-container matColumnDef="AuthorID">
       <th mat-header-cell *matHeaderCellDef>Autor ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.authorID }}</td>
     </ng-container>
 
     <ng-container matColumnDef="Name">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="Ações">
