--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -111,14 +111,14 @@
     }"
     style="display: none !important"
   >
-    <ng-container matColumnDef="GenreID">
-      <th mat-header-cell *matHeaderCellDef>Categoria ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.genreID }}</td>
+    <ng-container matColumnDef="ComicID">
+      <th mat-header-cell *matHeaderCellDef>Quadrinho ID</th>
+      <td mat-cell *matCellDef="let element">{{ element.comicID }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="Nome">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    <ng-container matColumnDef="Titulo">
+      <th mat-header-cell *matHeaderCellDef>Titulo</th>
+      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
     </ng-container>
 
     <ng-container matColumnDef="Ações">
