--- a/front-end/src/app/components/toggle-theme/toggle-theme.component.scss
+++ b/front-end/src/app/components/toggle-theme/toggle-theme.component.scss
@@ -49,7 +49,7 @@ $size: rem(20);
       content: "";
       position: absolute;
 
-      background-image: url("../../../assets/img/icons/light-mode.svg");
+      background-image: url(../../../assets/img/icons/light-mode.svg);
       background-size: $size $size;
 
       height: $size;
