✨ feat: comic image load.

--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -150,7 +150,7 @@
           color="primary"
           (click)="openDialog(element)"
         >
-          Edit
+          Editar
         </button>
         <button
           class="btn"
