--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -64,18 +64,18 @@
       <mat-form-field>
         <input matInput placeholder="Categoria" formControlName="description" />
       </mat-form-field>
-    </div>
 
-    <div class="full-wrapper button-wrapper">
-      <div class="button-wrapper">
-        <button
-          (click)="loadData(form.value)"
-          class="search-button"
-          mat-flat-button
-          color="primary"
-        >
-          Pesquisar
-        </button>
+      <div class="full-wrapper button-wrapper">
+        <div class="button-wrapper">
+          <button
+            (click)="loadData(form.value)"
+            class="search-button"
+            mat-flat-button
+            color="primary"
+          >
+            Pesquisar
+          </button>
+        </div>
       </div>
     </div>
   </form>
@@ -123,7 +123,9 @@
 
     <ng-container matColumnDef="Descrição">
       <th mat-header-cell *matHeaderCellDef>Descrição</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      <td class="description" mat-cell *matCellDef="let element">
+        {{ element.description }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="Preço">
