✨ feat: delete genre relationships.

--- a/front-end/src/app/modules/admin/components/author-crud/author-crud.component.html
+++ b/front-end/src/app/modules/admin/components/author-crud/author-crud.component.html
@@ -96,7 +96,7 @@
           color="primary"
           (click)="openDialog(element)"
         >
-          Edit
+          Editar
         </button>
         <button
           class="btn"
@@ -104,7 +104,7 @@
           color="warn"
           (click)="deleteItem(element)"
         >
-          Delete
+          Deletar
         </button>
       </td>
     </ng-container>
