--- a/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/modules/admin/components/comic-crud/comic-crud.component.html
@@ -160,7 +160,7 @@
           color="warn"
           (click)="deleteItem(element)"
         >
-          Delete
+          Deletar
         </button>
       </td>
     </ng-container>
