--- a/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
+++ b/front-end/src/app/modules/admin/components/genre-crud/genre-crud.component.html
@@ -106,6 +106,13 @@
         >
           Delete
         </button>
+        <button
+          class="btn"
+          mat-raised-button
+          (click)="deleteGenreRelationships(element)"
+        >
+          Remover Vínculos
+        </button>
       </td>
     </ng-container>
 
